--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(VisualTree VERSION 0.1 LANGUAGES CXX)
+project(tree-visualizer VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -32,31 +32,31 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(VisualTree
+    qt_add_executable(tree-visualizer
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET VisualTree APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET tree-visualizer APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(VisualTree SHARED
+        add_library(tree-visualizer SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(VisualTree
+        add_executable(tree-visualizer
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(VisualTree PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(tree-visualizer PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(VisualTree PROPERTIES
+set_target_properties(tree-visualizer PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -64,10 +64,10 @@ set_target_properties(VisualTree PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS VisualTree
+install(TARGETS tree-visualizer
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(VisualTree)
+    qt_finalize_executable(tree-visualizer)
 endif()
